--- a/style.css
+++ b/style.css
@@ -36,61 +36,9 @@ section{
     transform: scale(1.2);
 }
 
-/*
-.header .nav-links{
-    list-style: none;
-}
-
-.header .nav__links li{
-    display: inline-block;
-    padding: 0 20px;    
-}
-
-.header .nav__links li:hover{
-    transform: scale(1.1);
-}
-
-.header .nav__links a{
-    font-size: 700;
-    color: #eceff1;
-    text-decoration: none;    
-}
-
-.header .nav__links li a:hover{
-    color: #5f6830;
-}
-
-.header .btn button{
-    font-weight: 700;
-    color: #1b3039;
-    padding: 9px 25px;
-    background: #eceff1;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-}
-
-.header .btn button:hover{
-    background-color: #e2f1f8;
-    color: #ffbc0e;
-    transform: scale(1.1);
-}*/
-
-
-/* galeria de fotos */
-
-.galeria {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-
 /*footer*/
 
-.footer {
+footer {
     padding: 20px;
     text-align: center;
     background: white;
@@ -102,7 +50,6 @@ section{
     width: 100%;
 }
 
-
 /*formularios*/
 
 .forms {
@@ -111,20 +58,37 @@ section{
     align-items: center;
 }
 
-.contact__fieldset--contacto{
-    text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    width: 300px;
-    color: white;
-    padding-top: 80px;
-}
-
 .contact__fieldset--reservas{
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    width: 300px;
+    width: 70%;
     color: #e2f1f8;
-    line-height: 50px;
+    line-height: 40px;
+}
+@media screen and (min-width: 768px){
+.contact__fieldset--reservas{
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    width: 400px;
+    color: #e2f1f8;
+    line-height: 40px;
+}
+}
+
+.campo {
+    width: 100%;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #f1f1f1;
+}
+.boton{
+    width: 40%;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: rgb(98, 141, 98);
+    line-height: 20px;
 }
 
 /*Titulos*/
@@ -134,6 +98,20 @@ section{
     color: #e2f1f8;
 }
 
+.titulovino {
+    color: black;
+    padding-top: 100px;
+}
+
+.titulos2 {
+    font-family: "Abril FatFace";
+    font-size: 50px;
+    text-align: center;
+    padding-left: 0px;
+    z-index: 3;
+    padding-left: 0px;
+}
+@media screen and (min-width: 769px) {
 .titulovino {
     color: black;
     padding-top: 80px;
@@ -147,6 +125,7 @@ section{
     z-index: 3;
     padding-left: 100px;
 }
+}
 
 .title {
     font-family: "Abril FatFace";
@@ -158,16 +137,22 @@ section{
 /*Texto*/
 
 .textohistoria{
-    text-align: left;
-    position: relative;
-    padding-left: 40px;
-
+    text-align: center;
 }
-
+.textohistoria2 {
+    text-align: center;
+}
+@media screen and (min-width: 768px){
+.textohistoria{
+    text-align: left;
+    padding-left: 40px;
+    padding-right: 40px;
+}
 .textohistoria2 {
     text-align: right;
+    padding-right: 40px;
 }
-
+}
 .textohome{
     font-family: Abyssinica SIL;
     font-size: x-large;
@@ -176,14 +161,30 @@ section{
 
 /*Imagenes y Backgrounds*/
 
+.imghistoria{ 
+    width: 100%;
+    padding: 0 25% 5% 25%;
+}
+.imghistoria2 {
+    height: 200px;
+    width: 300px;
+    width: 100%;
+    padding: 0 25% 5% 25%;
+}
+@media screen and (min-width: 768px){
 .imghistoria{
     float: right;
+    padding: 0 40px 0 0;
+    width: 300px;
+    height: 170px;
 }
 
 .imghistoria2 {
     float: left;
     height: 200px;
     width: 300px;
+    padding: 0 0 0 40px;
+}
 }
 
 .backgroundcontacto{
@@ -199,13 +200,55 @@ section{
 
 .img{
     width: 100%;
-    height: 500px;
+    height: 20%;
 }
 
+/*Cards*/
+
+@media screen and (max-width: 768px){
+.galeria{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-left: 20%;
+    padding-right: 15%;
+}
+}
+.galeria {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 .borde {
     margin: 5px;
     border: 1px solid #ccc;
     float: left;
     width: 180px;
-    height: 450px;
+    height: 200px;
     }
+
+.card-flip > div {
+    backface-visibility: hidden;
+    transition: transform 300ms;
+    transition-timing-function: linear;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    display: flex;
+}
+.card-front {
+    transform: rotateY(0deg);
+}
+.card-back {
+    transform: rotateY(180deg);
+    position: absolute;
+    top: 0;
+}  
+.card-flip:hover .card-front {
+    transform: rotateY(-180deg);
+}
+.card-flip:hover .card-back {
+    transform: rotateY(0deg);
+}
+
