--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ footer {
     background-color: #f1f1f1;
 }
 .boton{
-    width: 40%;
+    width: 100px;
     padding: 16px 20px;
     border: none;
     border-radius: 4px;
