--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,4 @@
 $color-boton: rgb(98, 141, 98);
-$color-fotos: rgb(254, 255, 246)
+$color-fotos: rgb(254, 255, 246);
+$color-campos: white;
+$color-font: rgb(255, 255, 255);
