--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,9 @@
 @import '../layout/header';
 @import 'mixins';
 @import '../layout/vinoteca';
+@import '../layout/fotos';
+@import '../layout/texto';
+@import'../layout/forms';
 
 *{
     box-sizing: border-box;
@@ -18,157 +21,4 @@ section{
     padding-top: 90px;
     min-height: 100vh;
 }
-
-/*formularios*/
-
-.forms {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.contact__fieldset{
-    text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    width: 70%;
-    color: #e2f1f8;
-    line-height: 40px;
-}
-@media screen and (min-width: 768px){
-.contact__fieldset{
-    text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    width: 400px;
-    color: #e2f1f8;
-    line-height: 40px;
-}
-}
-
-.campo {
-    width: 100%;
-    padding: 16px 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: #f1f1f1;
-}
-.boton{
-
-    width: 100px;
-    padding: 16px 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: $color-boton;
-    line-height: 20px;
-    margin-top: 10%;
-}
-
-/*Titulos*/
-
-.titulosforms {
-    padding-top: 80px;
-    color: #e2f1f8;
-}
-
-.titulovino {
-    color: black;
-    padding-top: 100px;
-}
-
-.titulos2 {
-    font-family: "Abril FatFace";
-    font-size: 50px;
-    text-align: center;
-    padding-left: 0px;
-    z-index: 3;
-}
-@media screen and (min-width: 769px) {
-.titulovino {
-    color: black;
-    padding-top: 80px;
-}
-
-.titulos2 {
-    font-family: "Abril FatFace";
-    font-size: 50px;
-    text-align: left;
-    padding-left: 10px;
-    z-index: 3;
-    padding-left: 90px;
-}
-}
-
-.title {
-    font-family: "Abril FatFace";
-    font-size: 50px;
-    text-align: center;
-    z-index: 3;
-}
-
-/*Texto*/
-
-.textohistoria{
-    text-align: center;
-}
-.textohistoria2 {
-    @extend .textohistoria;
-}
-@media screen and (min-width: 768px){
-.textohistoria{
-    text-align: left;
-    padding-left: 40px;
-    padding-right: 40px;
-}
-.textohistoria2 {
-    text-align: right;
-    padding-right: 40px;
-}
-}
-.textohome{
-    font-family: Abyssinica SIL;
-    font-size: x-large;
-    text-align: center;
-}
-
-/*Imagenes y Backgrounds*/
-
-.imghistoria{ 
-    width: 100%;
-    padding: 0 25% 5% 25%;
-}
-.imghistoria2 {
-    @include sizes(100%,200px);
-    padding: 0 25% 5% 25%;
-}
-@media screen and (min-width: 768px){
-.imghistoria{
-    float: right;
-    padding: 0 40px 0 0;
-    @include sizes(300px,170px);
-}
-
-.imghistoria2 {
-    float: left;
-    @include sizes(300px,200px);
-    padding: 0 0 0 40px;
-}
-}
-
-.backgroundcontacto{
-    background-image: url(../assets/backcont.jpeg);
-    size: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.backreservas{
-    background-image: url(../assets/backreservas.jpeg);
-    size: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.img{
-    @include sizes(100%,20%);
-}
-
 
