--- a/layout/_vinoteca.scss
+++ b/layout/_vinoteca.scss
@@ -29,55 +29,47 @@
         flex-wrap: wrap;
         padding: 6% 25% 17% 25%;
     }
+
     .flip-card {
         background-color: transparent;
         @include sizes(200px,200px);
         perspective: 1000px;
-    }
-    
-    .flip-card-inner {
-        position: relative;
-        @include sizes(100%,100%);
-        text-align: center;
-        transition: transform 0.6s;
-        transform-style: preserve-3d;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    }
-    
-    .flip-card:hover .flip-card-inner {
-        transform: rotateY(180deg);
-    }
-    
-
-    .flip-card-front {
-        background-color: transparent;
-        color: black;
-        position: absolute;
-        @include sizes(100%,100%);
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
-    }
-    
-    .flip-card-back {
-        background-color: $color-fotos;
-        color: rgb(0, 0, 0);
-        transform: rotateY(180deg);
-        justify-content: center;
-        position: absolute;
-        @include sizes(100%,100%);
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
-    }
-    
-    .flip_card-text{
-        margin-top: 30%;
-    }
-    
-    .flip_card-boton{
-        margin-top: 10px;
-    }
-    
-    .flip_card-img{
-        @include sizes(200px,200px);
-    
+        &-inner{
+            position: relative;
+            @include sizes(100%,100%);
+            text-align: center;
+            transition: transform 0.6s;
+            transform-style: preserve-3d;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        }
+        &:hover .flip-card-inner{
+            transform: rotateY(180deg);
+        }
+        &-front{
+            background-color: transparent;
+            color: black;
+            position: absolute;
+            @include sizes(100%,100%);
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+        }
+        &-back{
+            background-color: $color-fotos;
+            color: rgb(0, 0, 0);
+            transform: rotateY(180deg);
+            justify-content: center;
+            position: absolute;
+            @include sizes(100%,100%);
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+        }
+        &-text{
+            margin-top: 30%;
+        }
+        &-boton{
+            margin-top: 10px;
+        }
+        &-img{
+            @include sizes(200px,200px);
+        }
     }
