--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -9,3 +9,9 @@
     flex-direction:row;
     justify-content:center;
 }
+
+@mixin backgrounds {
+    size: 100%;
+    background-repeat: repeat;
+    background-size: cover;
+}
