--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,64 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap");
-footer {
-  padding: 20px;
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap"); /*footer {
+    padding: 20px;
+    text-align: center;
+    background: white;
+    background-color: rgb(158, 147, 86);
+    margin-top: 20px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+  }*/
+.footer-basic {
+  padding: 40px 0;
+  background-color: #302f2f;
+  color: #ffffff;
+}
+.footer-basic ul {
+  padding: 0;
+  list-style: none;
   text-align: center;
-  background: white;
-  background-color: rgb(158, 147, 86);
-  margin-top: 20px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  position: relative;
-  bottom: 0;
-  width: 100%;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+}
+.footer-basic ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+.footer-basic ul a:hover {
+  opacity: 1;
+}
+.footer-basic li {
+  padding: 0 10px;
+}
+.footer-basic .social {
+  text-align: center;
+  padding-bottom: 25px;
+}
+.footer-basic .social > a {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  margin: 0 8px;
+  color: inherit;
+  opacity: 0.75;
+}
+.footer-basic .social > a:hover {
+  opacity: 0.9;
+}
+.footer-basic .copyright {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 13px;
+  color: #aaa;
+  margin-bottom: 0;
 }
 
 .header {
@@ -59,7 +109,7 @@ footer {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 6% 25% 17% 25%;
+  padding: 9% 25% 14% 25%;
 }
 
 .flip-card {
